[MINOR] enabling service level APIs at MIC
